gem2deb (0.18.2) UNRELEASED; urgency=medium

  * gem2deb-test-runner: when under autopkgtest, don't pass any GEM_PATH at
    all, no even an empty one. This fixes dependency checks under autopkgtest.

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 13 Jun 2015 12:13:45 -0300

gem2deb (0.18.1) unstable; urgency=medium

  * gem2deb-test-runner: include `Gem.path` in GEM_PATH so that dependency
    checking works against the system-installed gemspecs.

 -- Antonio Terceiro <terceiro@debian.org>  Fri, 12 Jun 2015 22:40:41 -0300

gem2deb (0.18) unstable; urgency=medium

  * make dh-make-ruby resilient against a corrupt "gem name to package name"
    cache (Closes: #786841)
  * dh_ruby: install gemspecs _before_ running tests so that checking
    dependencies when running tests actually works.
  * gem2deb-test-runner: fix dependency checking during build (by fixing name
    of Rubygems environment variable, s/GEMPATH/GEM_PATH/)
  * gem2deb-test-runner: when called with --check-dependencies, do not exit
    after successfully checking dependencies, but before running tests.

 -- Antonio Terceiro <terceiro@debian.org>  Fri, 12 Jun 2015 22:17:18 -0300

gem2deb (0.17) unstable; urgency=medium

  * dh-make-ruby:
    - fix call to wrap-and-sort
    - add -w/--overwrite option to overwrite files under debian/.
      Closes: #785106
    - only call wrap-and-sort if either there was no previous
      packaging, or -w/--overwrite was passed.
    - when acting on an existing source package, read the source package name
      from debian/changelog.
    - always create test suite files to make dh-make-ruby idempotent
    - suggest checking dependencies during build and on DEP-8 tests
  * gem2deb-test-runner:
    - add -c/--check-dependencies to check for dependencies (as declared in
      the Rubygems metadata, not as declared in debian/control) before running
      the tests (Closes: #785120, #770748)
    - always print command lines used to run the tests