@@ -2,6 +2,8 @@ gem2deb (0.18.2) UNRELEASED; urgency=medium
 
   * gem2deb-test-runner: when under autopkgtest, don't pass any GEM_PATH at
     all, no even an empty one. This fixes dependency checks under autopkgtest.
+  * dh-make-ruby: convert *all* underscores (`_`) to dashes (`-`) when
+    converting gem names to source package names (not just the first one).
 
  -- Antonio Terceiro <terceiro@debian.org>  Sat, 13 Jun 2015 12:13:45 -0300
 
